--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "isaacsai030@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
     },
     "require-dev": {
